[package]
name = "owasm-ethereum"
version = "0.7.1"
authors = ["NikVolf <nikvolf@gmail.com>", "Oasis Labs <info@oasislabs.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oasislabs/owasm-ethereum"
homepage = "https://github.com/oasislabs/owasm-ethereum"
documentation = "https://docs.rs/crate/owasm-ethereum"
description = "Externs library to interact with Ethereum-like network"
keywords = ["wasm", "oasis", "oasislabs", "parity", "ethereum", "blockchain"]
categories = ["no-std", "embedded"]

[build-dependencies]
parity-hash = { version = "1.2.2", default-features = false }

[dependencies]
owasm-std = "0.10"

[dependencies.uint]
version = "0.4"
default-features = false

[dependencies.byteorder]
version = "1"
default-features = false

[dependencies.parity-hash]
version = "1.2.2"
default-features = false

[features]
default = []
kip4 = []
kip6 = []
std = ["owasm-std/std", "parity-hash/std", "uint/std", "byteorder/std"]
