[package]
name = "owasm-ethereum"
version = "0.8.0"
authors = ["NikVolf <nikvolf@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/oasislabs/owasm-ethereum"
homepage = "https://github.com/oasislabs/owasm-ethereum"
documentation = "https://docs.rs/crate/owasm-ethereum"
description = "Externs library to interact with Ethereum-like network"
keywords = ["wasm", "oasis", "ethereum", "blockchain"]
categories = ["no-std", "embedded"]
edition = "2018"

[dependencies]
oasis-std = "0.1"

[features]
default = []
kip4 = []
kip6 = []
